--- a/code/theme/default/bo/custom_style.css
+++ b/code/theme/default/bo/custom_style.css
@@ -21,3 +21,9 @@ body {
 .navbar-default .dropdown-menu {
 	background-color: #534F71;
 }
+.aa-bs .yamm .yamm-content.yamm-aw .row > ul > li > a {
+	color: #FFF;
+}
+.aa-bs .yamm .yamm-content.yamm-aw .row > ul > li > p {
+	color: #FFF;
+}
